--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -3,7 +3,7 @@
 }
 
 body {
-  background: #cff;
+  background: #fff;
 }
 
 header {
@@ -19,7 +19,7 @@ section {
   margin-top: 1em;
   font-size: 120%;
   padding: 20px;
-  background: #fff;
+  background: #cef;
 }
 
 section h1 {
@@ -50,7 +50,7 @@ nav {
 }
 
 nav {
-  background-color: white;
+  background-color: #cef;
   padding: 0 0.7em;
   white-space: nowrap;
 }
@@ -164,4 +164,12 @@ div.field, div.actions {
 #error_explanation ul li {
   font-size: 12px;
   list-style: square;
+}
+
+ul.users {
+  margin-top: 1em;
+}
+
+.users li {
+  list-style: none;
 }
