--- a/app/views/shared/_feed_item.html.erb
+++ b/app/views/shared/_feed_item.html.erb
@@ -7,7 +7,7 @@
       <%= link_to feed_item.user.name, feed_item.user %>
     </span>
     <span class="content">
-      <%= feed_item.content %>
+      <%= wrap(feed_item.content) %>
     </span>
     <span class="timestamp">
       Posted <%= time_ago_in_words(feed_item.created_at) %> ago.
